--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -2,7 +2,7 @@
 name: A🔄自动同步🔄A
 on:
   schedule:
-    - cron: '0 17 * * *'
+    - cron: '0 4 */2 * *'
   workflow_dispatch:
   watch:
     types: started
