增加多一次打卡，以免网路问题而造成无法打卡

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '50 21 * * *' #北京时间5点50打卡
+    - cron: '30 21,4 * * *' #北京时间5点30打卡，和12点半
   workflow_dispatch:
   watch:
     types: started
